[gd_scene load_steps=3 format=2]

[ext_resource path="res://assets/textures/menu_arrow.png" type="Texture" id=1]
[ext_resource path="res://scripts/ActionItem.gd" type="Script" id=2]

[node name="ActionItem" type="HBoxContainer"]
margin_right = 40.0
margin_bottom = 40.0
focus_mode = 2
mouse_filter = 2
custom_constants/separation = 8
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
margin_top = 7.0
margin_right = 50.0
margin_bottom = 33.0
size_flags_horizontal = 3
text = "Item"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FocusIndicator" type="TextureRect" parent="."]
margin_left = 58.0
margin_right = 74.0
margin_bottom = 40.0
texture = ExtResource( 1 )
stretch_mode = 4
flip_h = true
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="focus_entered" from="." to="." method="_on_ActionItem_focus_entered"]
[connection signal="focus_exited" from="." to="." method="_on_ActionItem_focus_exited"]
